# compression

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  autoresearch-prompt.txt  campaigns.tsv  ideas.md  lzw.py  results.tsv
.codex/skills/compression-autoresearch/: SKILL.md
benches/: compression.rs  squash.rs  weighted.rs
docs/: benchmarking.md  fse-details.md  harness-ideas.md  level-strategies-plan.md  level-subsystem-baselines.md  zstd-format.md
docs/steps/: step-1-design.md  step-2-design.md  step-3-design.md  step-4-design.md  step-5-design.md  step-6-design.md
examples/: basic.rs  silesia_bench.rs
scripts/: autoresearch_log.py  plot_results_progress.py  research_loop.sh
src/: error.rs  frame.rs  fse.rs  huffman.rs  lib.rs  main.rs  profiling.rs  xxhash.rs
src/decoder/: literals.rs  mod.rs  sequences.rs
src/encoder/: block.rs  lz77.rs  mod.rs
src/tables/: mod.rs  sequences.rs
tests/: acceptance.rs  integration.rs
